# pi-odoo-skill-manager

./: .envrc  .gitignore  AGENTS.md  GETTING_STARTED.md  LEARNING_AND_SHARING.md  README.md  SECURITY.md  osmo.py  pi-odoo-devkit.py  pi-odoo-skill-manager.py  pyproject.toml
docs/: cli-contract.md  operator-cheatsheet.md
docs/plans/: cli-contract-matrix.md  cross-tool-release-guard-work-package.md  odoo-test-runner-tool-work-package.md  osmo-rename-work-package.md  v0.3.0-delivery-plan.md
docs/releases/: README.md  RELEASE_CHECKLIST.md  v0.3.0.md
scripts/: bootstrap.sh  check-skills-consistency.py  install-git-hooks.sh  smoke-test.sh  test-cli-contracts.sh  test-cli-golden.sh
skills/: README.md
skills/local-db/: SKILL.md
skills/odoo-addon-lifecycle/: SKILL.md
skills/odoo-shell-debug/: SKILL.md
skills/odoo-translate/: SKILL.md
skills/odoo-ui-check/: SKILL.md
skills/odoo-ui-regression-check/: SKILL.md
skills/skill-authoring/: SKILL.md
tests/golden/: help.json
