[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osmo"
version = "0.3.0"
description = "TUI-first skill manager for sharing and managing Odoo skills in pi projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click==8.1.7",
]

[project.scripts]
osmo = "osmo:main"

[tool.setuptools]
py-modules = ["osmo"]
